Improve log analyzer: network metrics, CLI, subdirectory layout
Cherry-pick log analyzer improvements from networktest branch and extend
with network performance metrics and usability enhancements.

Log directory restructuring:
- Test logs now go into timestamped subdirectories (networklogs/run<timestamp>/)
- Reduce NET_MAX_LOG_FILES default from 10 to 5 (each run dir counts as 1)
- Make generateBatchId() reuse existing ID to avoid duplicate subdirectories
- Move setTestMode() out of @BeforeClass so CI tests don't produce log files

Network performance metrics:
- Track compressed message sizes, send() blocking times, game duration, turns
- Add Network Performance section to report between Summary and Error Analysis
- Gate batch-only sections (Batch Performance, Validation, Results by Player
  Count) behind isBatchTestData() for standalone log analysis

CLI and usability:
- Add LogAnalyzerCli for standalone log file analysis
- Add analyzeLog test wrapper for easy Maven invocation
- Default output to network-log-analysis.md in same directory as input file
- Replace analyzeExistingLogs with simpler analyzeLog method
- Add fallback timestamp extraction from parent directory names

Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>